--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "prop-types": "15.6.2",
+    "ramda": "0.26.1",
     "react": "16.6.0",
     "react-app-rewired": "1.6.2",
     "react-dom": "16.6.0",
