--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "15.6.2",
     "ramda": "0.26.1",
     "react": "16.6.0",
+    "react-app-rewire-scss": "1.0.2",
     "react-app-rewired": "1.6.2",
     "react-dom": "16.6.0",
     "react-scripts": "2.1.1",
