--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@material-ui/core": "3.1.0",
+    "@material-ui/icons": "3.0.1",
+    "antd": "3.10.4",
     "prop-types": "15.6.2",
     "ramda": "0.26.1",
     "react": "16.6.0",
@@ -27,7 +30,8 @@
     "react-app-rewired": "1.6.2",
     "react-dom": "16.6.0",
     "react-scripts": "2.1.1",
-    "react-test-renderer": "16.6.1"
+    "react-test-renderer": "16.6.1",
+    "styled-components": "4.0.3"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -46,7 +50,8 @@
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
     "husky": "1.2.0",
-    "jest": "23.6.0"
+    "jest": "23.6.0",
+    "jest-styled-components": "6.2.0"
   },
   "jest": {
     "setupFiles": [
