--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "react-app-rewire-scss": "1.0.2",
     "react-app-rewired": "1.6.2",
     "react-dom": "16.6.0",
+    "react-redux": "5.0.6",
     "react-scripts": "2.1.1",
     "react-test-renderer": "16.6.1",
+    "redux": "3.7.2",
+    "redux-devtools-extension": "2.13.5",
+    "redux-thunk": "2.3.0",
     "styled-components": "4.0.3"
   },
   "devDependencies": {
@@ -51,7 +55,8 @@
     "eslint-plugin-react": "7.11.1",
     "husky": "1.2.0",
     "jest": "23.6.0",
-    "jest-styled-components": "6.2.0"
+    "jest-styled-components": "6.2.0",
+    "redux-mock-store": "1.5.3"
   },
   "jest": {
     "setupFiles": [
