--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@material-ui/core": "3.1.0",
     "@material-ui/icons": "3.0.1",
     "antd": "3.10.4",
-    "is-value-type": "0.0.1",
+    "is-value-type": "0.0.2",
     "prop-types": "15.6.2",
     "ramda": "0.26.1",
-    "react": "16.6.0",
+    "react": "^16.6.0",
     "react-app-rewire-scss": "1.0.2",
     "react-app-rewired": "1.6.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-debounce-input": "3.2.0",
     "react-dom": "16.6.0",
     "react-redux": "5.0.6",
